"fixed DELETE route"
