# controllers/employees.js
@@ -74,7 +74,7 @@ const getSingle = async (req, res) => {
     const response = await mongodb.getDb().db('project2').collection('employees').deleteOne({ _id: userId}, true)
     console.log(response)
     if(response.deletedCount > 0) {
-    res.status(204).send();
+    res.status(200).send();
     } else {
       res.status(500).json(response.error || 'Some error ocurred while deleting the employee data')
     }
